--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-azure-functions
-pandas
-jinja2
-imgkit
+azure-functions==1.2.0
+imgkit==1.0.2
+Jinja2==2.11.1
+MarkupSafe==1.1.1
+numpy==1.18.2
+pandas==1.0.3
+python-dateutil==2.8.1
+pytz==2019.3
+six==1.14.0
