--- a/.github/workflows/functionapp.yml
+++ b/.github/workflows/functionapp.yml
@@ -42,8 +42,8 @@ jobs:
 
     - name: 'Make wkhtmlimage executable'
       shell: bash
-      run: chmod +x /home/site/wwwroot/card/binaries/*
-      
+      run: chmod +x $GITHUB_WORKSPACE/card/binaries/*
+
     - name: 'Run Azure Functions Action'
       uses: Azure/functions-action@v1
       id: fa
