--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-azure-functions==1.2.0
+azure-functions==1.4.0
 imgkit==1.0.2
-Jinja2==2.11.1
-MarkupSafe==1.1.1
-numpy==1.18.2
-pandas==1.0.3
-python-dateutil==2.8.1
-pytz==2019.3
-six==1.14.0
+numpy==1.19.2; python_version >= "3.6"
+pandas==1.1.3; python_full_version >= "3.6.1"
+python-dateutil==2.8.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
+pytz==2020.1
+six==1.15.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
